Rollback java version to fix travisCI